<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, stREetMIX!</string>
    <string name="app_name">stREetMIX</string>
    <string name="startgamebutton">Start Game</string>
    <string name="joingamebutton">Join Game</string>
    <string name="continuegamebutton">Continue Last Game</string>
    <string name="available_scenario_list_title">Pick a scenario to play.</string>
    <string name="scenario_description_text">There should be a scenario description here...</string>
    <string name="joingame_playidfield">Enter Play ID#</string>
    <string name="pickateam_text">Pick a team:</string>
    <string name="blue_team">Blue Team</string>
    <string name="red_team">Red Team</string>
    
</resources>
