<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

    <ImageView 
        android:id="@+id/titlescreen_image"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/title_screen">
    </ImageView>
    
    <Button 
        android:id="@+id/continuegamebutton"
        android:text="@string/continuegamebutton"
        android:textSize="18px"
        android:layout_width="150px"
        android:layout_height="100px"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">
    </Button>
    
    <Button 
        android:id="@+id/joingamebutton"
        android:text="@string/joingamebutton"
        android:textSize="14px"
        android:gravity="center_vertical|center_horizontal"
        android:layout_toLeftOf="@id/continuegamebutton"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="50px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">
    </Button>

    <Button 
        android:id="@+id/startgamebutton"
        android:text="@string/startgamebutton"
        android:textSize="14px"
        android:gravity="center_vertical|center_horizontal"
        android:layout_toLeftOf="@id/continuegamebutton"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@id/joingamebutton"
        android:layout_width="fill_parent"
        android:layout_height="50px"
        android:layout_alignParentLeft="true">
    </Button>
    
    <TextView
        android:id="@+id/titlescreen_debugtext"
        android:text="ALPHA v0.1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="20px"
        android:textColor="#0000ff">
    </TextView>
    
</RelativeLayout>
